--- a/src/app/material-timepicker/ngx-material-timepicker.component.html
+++ b/src/app/material-timepicker/ngx-material-timepicker.component.html
@@ -2,7 +2,7 @@
 <div class="timepicker-overlay" *ngIf="isOpened">
     <div class="timepicker" [@timepicker]="animationState" (@timepicker.done)="animationDone($event)">
         <header class="timepicker__header">
-            <img src="assets/clock.svg" *ngIf="keyboardType === keyboardTypes.CLOCK" (click)="keyboardType = keyboardTypes.NUMPAD">
+            <img src="../../assets/clock.svg" *ngIf="keyboardType === keyboardTypes.CLOCK" (click)="keyboardType = keyboardTypes.NUMPAD">
             <img src="assets/numpad.svg" *ngIf="keyboardType === keyboardTypes.NUMPAD" (click)="keyboardType = keyboardTypes.CLOCK">
             <ngx-material-timepicker-dial [format]="format" [hour]="selectedHour?.time"
                                           [minute]="selectedMinute?.time"
