--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
+@import "assets/icons/icons.css";
 
 html {
     font-family: 'Roboto', sans-serif;
