--- a/src/app/material-timepicker/styles/_custom.scss
+++ b/src/app/material-timepicker/styles/_custom.scss
@@ -1,13 +1,25 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
-
-html {
-    font-family: 'Roboto', sans-serif;
+@font-face {
+    font-family: 'icons';
+    src: url('/assets/icons/icons.eot');
+    src: url('/assets/icons/icons.eot?#iefix') format('embedded-opentype'),
+    url('/assets/icons/icons.woff') format('woff'),
+    url('/assets/icons/icons.ttf') format('truetype'),
+    url('/assets/icons/icons.svg#icons') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
-
-body {
-    margin: 0;
-    color: #333333;
+[class*='icon-']:before{
+    display: inline-block;
+    font-family: 'icons';
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
 }
+.icon-backspace:before{content:'\0041';}
+.icon-clock:before{content:'\0042';}
+.icon-keypad:before{content:'\0043';}
 
 .simple-keyboard {
     font-family: HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
