--- a/src/app/material-timepicker/ngx-material-timepicker.component.scss
+++ b/src/app/material-timepicker/ngx-material-timepicker.component.scss
@@ -2,6 +2,18 @@
 @import "styles/theme";
 @import "styles/custom";
 
+.hidden-button {
+    display: block;
+    visibility: hidden;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    border: 0;
+    position: fixed;
+    top: -1px;
+    left: -1px;
+}
+
 .timepicker-backdrop-overlay {
     position: fixed;
     top: 0;
