--- a/src/app/material-timepicker/components/timepicker-dial-control/ngx-material-timepicker-dial-control.component.html
+++ b/src/app/material-timepicker/components/timepicker-dial-control/ngx-material-timepicker-dial-control.component.html
@@ -2,4 +2,4 @@
 <input #inputElement class="timepicker-dial__control timepicker-dial__item"
        [ngClass]="{'timepicker-dial__item_active': isActive, 'timepicker-dial__control_editable': isEditable}"
        [(ngModel)]="time" (focus)="saveTimeAndChangeTimeUnit($event, timeUnit)" (focusin)="blurAll($event)" (mousedown)="blurAll($event)"
-       (blur)="formatTime()" [timepickerAutofocus]="isActive" (keydown)="onKeyDown($event)" [readonly]="true" disabled>
+       (blur)="formatTime()" [timepickerAutofocus]="isActive" (keydown)="onKeyDown($event)" [readonly]="true">
