--- a/src/app/material-timepicker/styles/_custom.scss
+++ b/src/app/material-timepicker/styles/_custom.scss
@@ -1,25 +1,25 @@
 @font-face {
-    font-family: 'icons';
-    src: url('/assets/icons/icons.eot');
-    src: url('/assets/icons/icons.eot?#iefix') format('embedded-opentype'),
-    url('/assets/icons/icons.woff') format('woff'),
-    url('/assets/icons/icons.ttf') format('truetype'),
-    url('/assets/icons/icons.svg#icons') format('svg');
+    font-family: 'decontimepicker';
+    src: url('/assets/fonts/decontimepicker.eot');
+    src: url('/assets/fonts/decontimepicker.eot?#iefix') format('embedded-opentype'),
+    url('/assets/fonts/decontimepicker.woff') format('woff'),
+    url('/assets/fonts/decontimepicker.ttf') format('truetype'),
+    url('/assets/fonts/decontimepicker.svg#decontimepicker') format('svg');
     font-weight: normal;
     font-style: normal;
 }
-[class*='icon-']:before{
+[class*='decontimepicker-']:before{
     display: inline-block;
-    font-family: 'icons';
+    font-family: 'decontimepicker';
     font-style: normal;
     font-weight: normal;
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale
 }
-.icon-backspace:before{content:'\0041';}
-.icon-clock:before{content:'\0042';}
-.icon-keypad:before{content:'\0043';}
+.decontimepicker-backspace:before{content:'\0041';}
+.decontimepicker-clock:before{content:'\0042';}
+.decontimepicker-keypad:before{content:'\0043';}
 
 .simple-keyboard {
     font-family: HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
