--- a/src/app/material-timepicker/styles/_custom.scss
+++ b/src/app/material-timepicker/styles/_custom.scss
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'decontimepicker';
-    src: url('/assets/icons/decontimepicker.eot');
-    src: url('/assets/icons/decontimepicker.eot?#iefix') format('embedded-opentype'),
-    url('/assets/icons/decontimepicker.woff') format('woff'),
-    url('/assets/icons/decontimepicker.ttf') format('truetype'),
-    url('/assets/icons/decontimepicker.svg#decontimepicker') format('svg');
+    src: url('../assets/icons/decontimepicker.eot');
+    src: url('../assets/icons/decontimepicker.eot?#iefix') format('embedded-opentype'),
+    url('../assets/icons/decontimepicker.woff') format('woff'),
+    url('../assets/icons/decontimepicker.ttf') format('truetype'),
+    url('../assets/icons/decontimepicker.svg#decontimepicker') format('svg');
     font-weight: normal;
     font-style: normal;
 }
