--- a/src/app/material-timepicker/styles/_custom.scss
+++ b/src/app/material-timepicker/styles/_custom.scss
@@ -31,9 +31,9 @@
         content: '\0043';
     }
 }
-font();
+@include font();
 .timepicker-overlay::ng-deep {
-    font();
+    @include font();
 }
 
 .simple-keyboard {
